--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Conduct of life'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: Fate -- Power -- Wealth -- Culture -- Behavior -- Worship -- Considerations
   by the way -- Beauty -- Illusions.
 title: The Conduct of Life
